# perp-exchange

./: .gitignore  Cargo.toml  docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/: 20260701150512_init_schema.sql
backend/src/: main.rs  state.rs
backend/src/handlers/: account.rs  auth.rs  mod.rs  orders.rs  positions.rs
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/engine/: mod.rs  order_handler.rs  polling.rs  valuation.rs
engine/src/trade/: orderbook.rs
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Logo.tsx  Navbar.tsx
frontend/store/: useExchangeStore.ts
infra/: setup_infra.sh
infra/clusters/: node1.yaml  node2.yaml  node3.yaml
infra/mpc-nodes/: node1-db.yaml  node2-db.yaml  node3-db.yaml
infra/scripts/: generate_shares.ts  migrate_nodes.sh  package-lock.json  package.json  tsconfig.json
infra/scripts/prisma/: schema.prisma
integration_tests/: Cargo.toml
integration_tests/src/: funding.rs  leverage.rs  lib.rs  lifecycle.rs  orderbook.rs  pipeline.rs  redis.rs
redis/: Cargo.toml
redis/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
