[workspace]
members = [
    "backend",
    "engine", "redis",
    
]
resolver = "2"


[workspace.dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "macros", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
fred = { version = "10.1.0", features = ["serde-json"] }