[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "macros", "bigdecimal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
bigdecimal = { version = "0.4", features = ["serde"] }