[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true}
tokio = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
sqlx = { workspace = true}
uuid = { workspace = true}
chrono = { workspace = true}
dotenvy = { workspace = true}
argon2 = { workspace = true}
jsonwebtoken = { workspace = true}
bigdecimal = { workspace = true}