[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
redis = { path = "../redis" }
engine = {path = "../engine"}
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
fred = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dotenvy = {workspace = true}